<resources>
    <string name="app_name">CloudMessageTutorial</string>
    <string name="default_notification_channel_id">0</string>
    <string name="title_activity_maps">Map</string>
    <string name="msg_token_fmt">TOKEN ASS BITCH %s</string>
    <string name="stop_button">Stop Service</string>
    <string name="test_button">TEST</string>
    <string name="start_button">Start Service</string>
    <string name="enter_latlng">Enter Latitude, Longitude</string>
    <string name="add_button">Add Geofence</string>
    <string name="current_location_hint">Get Current Location</string>

</resources>
